<resources>
    <string name="app_name">Proyecto Contactos</string>
    <string name="textBtn">Siguiente</string>
    <string name="title_activity_confirmation">Confirmacion</string>
    <string name="hintName">Nombre</string>
    <string name="hintDate">Fecha de Nacimiento</string>
    <string name="hintEmail">Correo Electronico</string>
    <string name="hintPhone">Telefono</string>
    <string name="hintDescription">Descripcion</string>
    <string name="errorName">El nombre digitado no es valido</string>
    <string name="errorDate">No ha seleccionado una fecha de nacimiento</string>
    <string name="errorEmail">El correo digitado no es valido</string>
    <string name="errorPhone">El numero digitado no es valido</string>
    <string name="textActionBar">Agregar Contacto</string>
    <string name="titleConfirm">Confirmar Datos</string>
    <string name="btnEdit">Editar Datos</string>
    <string name="confirmDate">Fecha de Nacimiento:</string>
    <string name="confirmCel">Numero Celular:</string>
    <string name="confirmEmail">Correo Electronico:</string>
    <string name="confirmDescrip">Descripcion:</string>
    <string name="btnPositive">Aceptar</string>

</resources>