<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginSides"
        android:layout_marginLeft="@dimen/marginSides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtxtName"
        android:hint="@string/hintName"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginSides"
        android:layout_marginLeft="@dimen/marginSides"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtxtDate"
        android:focusable="false"
        android:inputType="date"
        android:hint="@string/hintDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginSides"
        android:layout_marginLeft="@dimen/marginSides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtxtPhone"
        android:hint="@string/hintPhone"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginSides"
        android:layout_marginLeft="@dimen/marginSides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtxtEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/hintEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginSides"
        android:layout_marginLeft="@dimen/marginSides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtxtDescription"
        android:hint="@string/hintDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnNext"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sizeButtonLetter"
        android:layout_marginTop="@dimen/marginTopBtn"
        android:text="@string/textBtn"
        android:theme="@style/btnStyle"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/marginSides"
        android:layout_marginLeft="@dimen/marginSides"
        android:layout_height="@dimen/heightBtn"/>

    </LinearLayout>

</ScrollView>